cleanup of alphabetanew, allow to pass argument for whose move it is. Tested and working with analyzesingleposition.py

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,5 +1,8 @@
-testboard:
 
+
+test:
+add more test cases
+test cases for obvious moves
 
 
 engine:
@@ -10,12 +13,11 @@ option for more verbose logging
 alphabetanew:
 options for more verbose logging
 handle black move or white move
+find whose move it is from node instead of function argument
 
 Node:
 clean up
 
-test:
-add more test cases
 
 boardrep:
 castling
