Updated notes, no time savings observed from passing selected node as new root node for next analysis

--- a/Todo.txt
+++ b/Todo.txt
@@ -6,10 +6,11 @@ test cases for obvious moves
 
 
 engine:
-use selected node as new root node, don't rebuild
-option for more verbose logging
+
+option for more verbose logging (include evaluation)
 handle exit command
 handle other commands
+Canceled: use selected node as new root node, don't rebuild, no time savings
 
 alphabetanew:
 options for more verbose logging
