--- a/Todo.txt
+++ b/Todo.txt
@@ -22,9 +22,9 @@ Node:
 clean up
 
 boardrep:
-en passant
 add piece factors for other pieces
 underpromotion
+find a workaround for underpromotion when checking number of legal moves
 
 ideas:
 save pseudolegal moves that turn out to be legal in the tree structure to save time
