--- a/Todo.txt
+++ b/Todo.txt
@@ -1,6 +1,6 @@
 Re-benchmark latest version on depth 3 and higher depths
 improve move generation speed
-
+pass starting / ending depth to single / multi search functions
 
 test:
 Add more metrics to analyzesingleposition.py (boards created per node? Number of cutoffs?)
